--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^4.1.1"
   },
   "dependencies": {
-    "commander": "2.9.0"
+    "commander": "2.9.0",
+    "mkdirp": "0.5.1"
   }
 }
